Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(08/24/14) - Improvements - Version 1.9.7.2

[!] Fix stray p tag in activation notice
[+] Add wrapper for Breadcrumb NavXT
[+] Define content width depending on page template

----

(08/10/14) - Improvements - Version 1.9.7.1

[*] Improve the organisation of the functions
[*] Clean up code
[!] Fix screen reader link
[+] Add filter `responsive_number_footer_widgets` to change when the `fit` class is added in the footer widgets.

----

(07/25/14) - Improvements - Version 1.9.7.0

[!] Improve Responsive Grid
[x] Remove default logo as per WordPress.org guidelines
[*] Update Screenshot

----

(07/18/14) - Improvements - Version 1.9.6.9

[!] Fix very long submenu items
[!] Fix path to ie7-fix.gif
[!] Fix front page error message

----

(07/11/14) - Improvements - Version 1.9.6.8

[*] Add taxonomy description to archive page
[*] Seperate featured area from front page

----

(07/04/14) - Improvements - Version 1.9.6.7

[*] Update cs_CZ translation
[*] Small code style improvements

----

(06/27/14) - Improvements - Version 1.9.6.6

[!] Update NL translation to fix theme options bug
[*] Improve page template switch from Responsive v2.0
[*] Enclose add_image_size within a function

----

(06/20/14) - Improvements - Version 1.9.6.4-5

[+] Change page templates when reverting from Responsive v2.0
[*] Move tags under categories under posts

----

(06/11/14) - Improvements - Version 1.9.6.3

[*] Fix minified js

----

(06/06/14) - Improvements - Version 1.9.6.2

[*] Updated Hindi Translation
[*] Updated FitVids.js in minified version
[*] Changed some codestyling

----

(05/30/14) - Improvements - Version 1.9.6.1

[*] Updated Ukrainian, Bulgarian, German, French(Canada), Hindi and Dutch Translation
[*] Updated FitVids.js in development version

----

(05/23/14) - Improvements - Version 1.9.6.0

[*] Updated Hungarian Translation
[+] Added new Canadian French Translation

----
