@@ -24,7 +24,7 @@ Template Name: Blog Excerpt (summary)
 get_header();
 ?>
 
-<div id="content-blog" class="<?php echo implode( ' ', responsive_get_content_classes() ); ?>">
+<div id="content-blog" class="<?php echo esc_attr( implode( ' ', responsive_get_content_classes() ) ); ?>">
 
 	<?php get_template_part( 'loop-header' ); ?>
 
