@@ -27,7 +27,7 @@ global $more;
 $more = 0;
 ?>
 
-<div id="content-blog" class="<?php echo implode( ' ', responsive_get_content_classes() ); ?>">
+<div id="content-blog" class="<?php echo esc_attr( implode( ' ', responsive_get_content_classes() ) ); ?>">
 
 	<?php get_template_part( 'loop-header' ); ?>
 
