@@ -159,7 +159,7 @@ if ( !function_exists( 'responsive_breadcrumb_lists' ) ) {
 			} elseif ( is_page() && $parent_id ) {
 				$breadcrumbs = array();
 				while ( $parent_id ) {
-					$page_child    = get_page( $parent_id );
+					$page_child    = get_post( $parent_id );
 					$breadcrumbs[] = sprintf( $link, get_permalink( $page_child->ID ), get_the_title( $page_child->ID ) );
 					$parent_id     = $page_child->post_parent;
 				}
