@@ -25,7 +25,7 @@ global $more;
 $more = 0;
 ?>
 
-	<div id="content-blog" class="<?php echo implode( ' ', responsive_get_content_classes() ); ?>">
+	<div id="content-blog" class="<?php echo esc_attr( implode( ' ', responsive_get_content_classes() ) ); ?>">
 
 		<!-- Blog page title -->
 		<?php if( responsive_free_get_option( 'blog_post_title_toggle' ) ) { ?>
